// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch blocked users if moderates channel 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "1",
    },
  },
  "errors": Array [
    [GraphQLError: user.canModerateChannel is not a function],
  ],
}
`;

exports[`should fetch blocked users if moderates community 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "1",
    },
  },
  "errors": Array [
    [GraphQLError: user.canModerateChannel is not a function],
  ],
}
`;

exports[`should fetch blocked users if owns community 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "1",
    },
  },
  "errors": Array [
    [GraphQLError: user.canModerateChannel is not a function],
  ],
}
`;

exports[`should not fetch blocked users if no permissions 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "1",
    },
  },
  "errors": Array [
    [GraphQLError: user.canModerateChannel is not a function],
  ],
}
`;

exports[`should not fetch blocked users if not authed 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "1",
    },
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'canModerateChannel' of undefined],
  ],
}
`;
